correção swagger
